tests/gen-derivation/inputvalidation/non-gen-target-type/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of list. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:14:8--14:16
 10 |   MkY : Y Int String
 11 | 
 12 | --- Non-Gen type ---
 13 | 
 14 | list : List Int
             ^^^^^^^^

Error: While processing right hand side of list'. Error during reflection: The result type of the generator function must be of type "`Gen MaybeEmpty` of desired result"

ValidateInput:17:17--17:25
 13 | 
 14 | list : List Int
 15 | list = deriveGen
 16 | 
 17 | list' : Fuel -> List Int
                      ^^^^^^^^

Error: While processing right hand side of y. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:20:5--20:17
 16 | 
 17 | list' : Fuel -> List Int
 18 | list' = deriveGen
 19 | 
 20 | y : Y Int String
          ^^^^^^^^^^^^

Error: While processing right hand side of y'. Error during reflection: The result type of the generator function must be of type "`Gen MaybeEmpty` of desired result"

ValidateInput:23:14--23:26
 19 | 
 20 | y : Y Int String
 21 | y = deriveGen
 22 | 
 23 | y' : Fuel -> Y Int String
                   ^^^^^^^^^^^^

